--- a/my-ehr/public/index.html
+++ b/my-ehr/public/index.html
@@ -8,7 +8,7 @@
     <!-- Set keywords for the website -->
     <meta name="keywords" content="Health Records, EHR, EMR, myEHR">
     <!-- Set the author -->
-    <meta name="author" content="Brad Hodkinson">
+    <meta name="author" content="Brad Hodkinson and Max Gillespie">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
