updated the font

--- a/my-ehr/public/index.html
+++ b/my-ehr/public/index.html
@@ -10,6 +10,7 @@
     <!-- Set the author -->
     <meta name="author" content="Brad Hodkinson and Max Gillespie">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <!--
